update requirement and fix bugss

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-param
-panel
-pandas
-hvplot
-scipy
-openpyxl
-tabulate
-requests
-numpy
-urllib3
-python-dotenv
+param==1.10.1
+bokeh==2.2.3
+panel==0.10.3
+pandas==1.2.1
+hvplot==0.7.0
+holoviews==1.14.1
+scipy==1.6.0
+openpyxl==3.0.6
+tabulate==0.8.9
+requests==2.25.1
+numpy==1.19.5
+urllib3==1.26.3
+python-dotenv==0.15.0
